Agrego placeholders para SEEDER
Se agregar los campos a completar para las variables de ambiente para hacer el seeding del usuario superadmin.

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SEEDER_USER_NAME=
+SEEDER_USER_APELLIDO=
+SEEDER_USER_USUARIO=
+SEEDER_USER_PAIS=
+SEEDER_USER_EMAIL=
+SEEDER_USER_PASSWORD=
