--- a/.env.example
+++ b/.env.example
@@ -43,9 +43,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SEEDER_USER_NAME=
-SEEDER_USER_APELLIDO=
-SEEDER_USER_USUARIO=
-SEEDER_USER_PAIS=
-SEEDER_USER_EMAIL=
-SEEDER_USER_PASSWORD=
+SEEDER_USER_NAME=Super
+SEEDER_USER_APELLIDO=Admin
+SEEDER_USER_USUARIO=superadmin
+SEEDER_USER_PAIS=Argentina
+SEEDER_USER_EMAIL=super@embirrados.com
+SEEDER_USER_PASSWORD=passembirrado
